--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "env-cmd -f ./env/.env.dev nodemon server.js",
     "start": "env-cmd -f ./env/.env.prod node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd -f ./env/.env.test jest ./tests/*.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,8 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
